--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="js.js">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="js.js"> </script>
     <link rel="apple-touch-icon" sizes="180x180" href="faviconManifest/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="faviconManifest/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="faviconManifest/favicon-16x16.png">
