--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
             <div class="aboutMe">
                 <h4>ABOUT ME</h4>
                 <p>
-                    Hello. My name Nikolas, me 29 years and I'm Junior Web 
-                    Developer. My way in IT I'm start in 2020 year.
+                    Hello. I'm Nikolas and I'm 29 years old. 
+                    I started my IT career in 2020 year and I'm a Junior Web Developer now.
                 </p>
                 
                 <p>
-                    All my free time, I spend for education new technology
-                    Frontend Development & Web Design. My English language leavel: Per-intermediate.
+                    I'm keen on new technologies learning, mostly in
+                    Frontend Development & Web Design domains. My English language level: Pre-Intermediate.
                 </p>
             </div>
 
             <div class="contact desctopContact">
                 <h4>CONTACT</h4>
                 <p>
-                    town Taganrog<br>
+                    I'm from Taganrog, Rostov region<br>
                     <a href="https://wa.me/+79185946414">WhatsApp Chat</a><br>
                     <a href="tel:+79001309266">Mobile: 8-900-130-9266</a><br>
                     <a href="http://vk.com/chistofor">vk.com/chistofor</a><br>
@@ -87,7 +87,7 @@
                     <div class="history">
                         <div class="historyInfo">
                             <p>
-                            ITA SFU - 160901 Aeronautical engineer. Expert.
+                            ITA SFU - 160901 Aeronautical engineer. Specialist.
                             </p>
                         </div>
 
@@ -149,13 +149,13 @@
                     <div class="history">
                         <div class="historyInfo">
                             <p>
-                                Industrial climber <br> OOO Promrecanstruction
+                                Industrial climber <br> Promrecanstruction
                             </p>
                         </div>
 
                         <div class="historyInfo">
                         <p>
-                            Aeronautical engineer <br> OAO NPK PANH
+                            Aeronautical engineer <br> NPK PANH
                         </p>
                         </div>
 
@@ -253,7 +253,7 @@
         <div class="contact mobileContact">
             <h4>CONTACT</h4>
             <p>
-                town Taganrog<br>
+                I'm from Taganrog, Rostov region<br>
                 <a href="https://wa.me/+79185946414">WhatsApp Chat</a><br>
                 <a href="tel:+79001309266">Mobile: 8-900-130-9266</a><br>
                 <a href="http://vk.com/chistofor">vk.com/chistofor</a><br>
