--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <section class="stacInformathion justefuStyle">
 
-            <div class="block">
+            <div class="block educationTop">
                 <hr>
                 <div class="heading">
                     <h4>EDUCATION</h4>
@@ -248,7 +248,7 @@
     
                     <div class="skillsWrapper circleTypeScript">
                         <div class="skillsCircleWrapper">
-                            <div class="skillsImg img6"></div>
+                            <div class="skillsImg img9"></div>
                         </div>
                         <p>TypeScript</p>
                     </div>
@@ -266,7 +266,7 @@
                     
                     <div class="skillsWrapper">
                         <div class="skillsCircleWrapper">
-                            <div class="skillsImg img5"></div>
+                            <div class="skillsImg img10"></div>
                         </div>
                         <p>Node.JS</p>
                     </div>
@@ -274,14 +274,14 @@
 
                     <div class="skillsWrapper jsCircleStak">
                         <div class="skillsCircleWrapper">
-                            <div class="skillsImg img7"></div>
+                            <div class="skillsImg img11"></div>
                         </div>
                         <p>PostgreSQL</p>
                     </div>
 
                     <div class="skillsWrapper circleMongoDB">
                         <div class="skillsCircleWrapper">
-                            <div class="skillsImg img8"></div>
+                            <div class="skillsImg img12"></div>
                         </div>
                         <p>MongoDB</p>
                     </div>
