telegram link test

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
             <div class="contact desctopContact">
                 <h4>CONTACT</h4>
                 <p>
-                    I'm from Taganrog, Rostov region<br>
+                    Taganrog, Rostov region<br>
                     <a href="https://wa.me/+79185946414">WhatsApp Chat</a><br>
                     <a href="tel:+79001309266">Mobile: 8-900-130-9266</a><br>
                     <!-- <a href="http://vk.com/chistofor">vk.com/chistofor</a><br> -->
                     <!-- <a href="http://Instagram.com/Chisto4">Instagram.com/Chisto4</a><br> -->
                     <a href="http://Github.com/chisto4">Github.com/chisto4</a><br>
                     <a href="https://vercel.com/dashboard/projects">Vercel.com/chisto4</a><br>
-
+                    <a href="tg://resolve?domain=<@Chistofor>">Telegram</a>
                 </p>
             </div>
         </div>
@@ -106,7 +106,8 @@
 
                         <div class="historyInfo">
                         <p>
-                        ANPOO BashKIT. Web-desigen and development web-aplication.
+                        ANPOO BashKIT. Web-design and web-applications development.
+                        
                         </p>
                         </div>
                     </div>
@@ -298,11 +299,12 @@
         <div class="contact mobileContact">
             <h4>CONTACT</h4>
             <p>
-                I'm from Taganrog, Rostov region<br>
+                Taganrog, Rostov region<br>
                 <a href="https://wa.me/+79185946414">WhatsApp Chat</a><br>
                 <a href="tel:+79001309266">Mobile: 8-900-130-9266</a><br>
                 <a href="http://Github.com/chisto4">Github.com/chisto4</a><br>
                 <a href="https://vercel.com/dashboard/projects">Vercel.com/chisto4</a><br>
+                <a href="tg://resolve?domain=<@Chistofor>">Telegram</a>
 
             </p>
         </div>
