--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                     <!-- <a href="http://Instagram.com/Chisto4">Instagram.com/Chisto4</a><br> -->
                     <a href="http://Github.com/chisto4">Github.com/chisto4</a><br>
                     <a href="https://vercel.com/dashboard/projects">Vercel.com/chisto4</a><br>
-                    <a href="tg://resolve?domain=<@Chistofor>">Telegram</a>
+                    <a href="tg://resolve?domain=@Chistofor">Telegram</a>
+
                 </p>
             </div>
         </div>
@@ -304,7 +305,7 @@
                 <a href="tel:+79001309266">Mobile: 8-900-130-9266</a><br>
                 <a href="http://Github.com/chisto4">Github.com/chisto4</a><br>
                 <a href="https://vercel.com/dashboard/projects">Vercel.com/chisto4</a><br>
-                <a href="tg://resolve?domain=<@Chistofor>">Telegram</a>
+                <a href="tg://resolve?domain=@Chistofor">Telegram</a>
 
             </p>
         </div>
