--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
                 <h4>CONTACT</h4>
                 <p>
                     Taganrog, Rostov region<br>
-                    <a href="https://wa.me/+79185946414">WhatsApp Chat</a><br>
-                    <a href="tel:+79001309266">Mobile: 8-900-130-9266</a><br>
-                    <!-- <a href="http://vk.com/chistofor">vk.com/chistofor</a><br> -->
-                    <!-- <a href="http://Instagram.com/Chisto4">Instagram.com/Chisto4</a><br> -->
                     <a href="http://Github.com/chisto4">Github.com/chisto4</a><br>
                     <a href="https://vercel.com/dashboard/projects">Vercel.com/chisto4</a><br>
-                    <a href="tg://resolve?domain=@Chistofor">Telegram</a>
+                    <a href="tel:+79001309266">Mobile: 8-900-130-9266</a><br>
+                    <a href="https://telegram.im/@Chistofor" target="_blank">Telegram Chat</a><br>
+                    <a href="https://wa.me/+79185946414">WhatsApp Chat</a><br>
+                    <!-- <a href="http://vk.com/chistofor">vk.com/chistofor</a><br> -->
+                    <!-- <a href="http://Instagram.com/Chisto4">Instagram.com/Chisto4</a><br> -->
+                    <!-- <a href="tg://resolve?domain=@Chistofor">Telegram</a><br> -->
 
                 </p>
             </div>
@@ -301,11 +302,12 @@
             <h4>CONTACT</h4>
             <p>
                 Taganrog, Rostov region<br>
-                <a href="https://wa.me/+79185946414">WhatsApp Chat</a><br>
-                <a href="tel:+79001309266">Mobile: 8-900-130-9266</a><br>
                 <a href="http://Github.com/chisto4">Github.com/chisto4</a><br>
                 <a href="https://vercel.com/dashboard/projects">Vercel.com/chisto4</a><br>
-                <a href="tg://resolve?domain=@Chistofor">Telegram</a>
+                <a href="tel:+79001309266">Mobile: 8-900-130-9266</a><br>
+                <a href="https://telegram.im/@Chistofor" target="_blank">Telegram Chat</a><br>
+                <a href="https://wa.me/+79185946414">WhatsApp Chat</a><br>
+                <!-- <a href="tg://resolve?domain=@Chistofor">Telegram</a> -->
 
             </p>
         </div>
