--- a/index.html
+++ b/index.html
@@ -60,7 +60,12 @@
 
         <section class="stacInformathion justefuStyle">
 
-            <div class="block educationTop">
+            <div class="portfolioLink">
+                <a href="http://Github.com/chisto4">MY GITHUB</a>
+            </div>
+
+
+            <div class="block">
                 <hr>
                 <div class="heading">
                     <h4>EDUCATION</h4>
