--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <div class="aboutMe">
                     <h4>ABOUT ME</h4>
                     <p>
-                        Hello. I'm Nikolas and I'm 29 years old.
-                        I started my IT career in 2020 year and I'm a Junior Web Developer now.
+                        Hello. I'm Nikolas and I'm 31 years old.
+                        I started my IT career in 2020 year and I'm a Middle Full Stack Developer now.
                     </p>
 
                     <p>
